--- a/pom.xml
+++ b/pom.xml
@@ -39,51 +39,55 @@
 			<version>1.10.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>1.5.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
 		<plugins>
-		<plugin>
-  			<artifactId>maven-jar-plugin</artifactId>
-  			<version>2.6</version>
-  			<configuration>
-        <archive>
-          <manifest>
-            <addClasspath>true</addClasspath>
-            <classpathPrefix>lib/</classpathPrefix>
-            <mainClass>pro.dominion.DominionBatch</mainClass>
-          </manifest>
-        </archive>
-      </configuration>
-
-  		</plugin>
-		
 			<plugin>
-			
-			 <artifactId>maven-assembly-plugin</artifactId>
-    <executions>
-      <execution>
-        <phase>package</phase>
-        <goals>
-          <goal>single</goal>
-        </goals>
-      </execution>
-    </executions>
-    <configuration>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>pro.dominion.DominionBatch</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
 
-      <archive>
-      <manifest>
-            <addClasspath>true</addClasspath>
-            <classpathPrefix>lib/</classpathPrefix>
-            <mainClass>pro.dominion.DominionBatch</mainClass>
-          </manifest>
-      </archive>
+			</plugin>
 
-      <descriptorRefs>
-        <descriptorRef>jar-with-dependencies</descriptorRef>
-      </descriptorRefs>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>pro.dominion.DominionBatch</mainClass>
+						</manifest>
+					</archive>
 
-    </configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
