--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,12 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.2.5.Final</version>
 		</dependency>
+		
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-annotations</artifactId>
-			<version>3.5.6-Final</version>
-		</dependency>
+        	<groupId>org.hibernate</groupId>
+        	<artifactId>hibernate-entitymanager</artifactId>
+       		<version>5.2.5.Final</version>
+    	</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
